--- a/docs/02_introduction.ipynb
+++ b/docs/02_introduction.ipynb
@@ -87,20 +87,20 @@
     "\n",
     "```{admonition} Remarques\n",
     "- Le caractère # indique un commentaire, qui sera ignoré par le shell.\n",
-    "- Le $ en rose représente l'invite de commande, qui varie selon les configurations. \n",
+    "- Le $ (en rose) représente l'invite de commande, qui varie selon les configurations. \n",
     "- La commande à taper dans votre terminal commence juste après l'invite de commande:  ssh …\n",
     "- L’argument -Y permet d’ouvrir des fenêtres graphiques à distance (e.g. éditeurs)\n",
     "```\n",
     "\n",
     "## Se connecter depuis un navigateur web !\n",
     "\n",
-    "Et oui, nous pouvons utiliser les ressources du cluster directement dans notre navigateur préférés. Nous parlerons par exemple dans la section suivante de JupyterHub. \n",
+    "Et oui, nous pouvons utiliser les ressources du cluster directement dans notre navigateur préféré. Nous en parlerons dans la section suivante avec JupyterHub. \n",
     "\n",
     "## Réserver des ressources\n",
     "\n",
-    "- Un programme disponible sur le controller (SLURM) permet de réserver des ressources (des processeurs sur des noeuds).\n",
+    "- Un programme disponible, le contrôleur (SLURM), permet de réserver des ressources (ie. des processeurs sur des noeuds).\n",
     "    - Vous verrez dans une autre session comment faire des réservations en ligne de commande avec SLURM.\n",
-    "- Avec Jupyter, la demande de réservation des ressources (ouvriers) est gérée pour nous lors de la connexion. \n",
+    "- Avec Jupyter, la demande de réservation des ressources est gérée pour nous lors de la connexion. \n",
     "    - Quand vous quittez Jupyter les ressources sont libérées"
    ]
   }
