--- a/docs/06_protoCommande.ipynb
+++ b/docs/06_protoCommande.ipynb
@@ -31,12 +31,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exemple de commande avec une valeur choisie par l'utilisateur \n",
+    "cd /shared/projects/form_2022_32" # Se déplacer dans l’arborescence des fichiers (cd : change directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "efd7f884-243a-467e-9bcd-330234fd346b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exemple d'argument avec valeur associée \n",
-    "tree -L 2 # Afficher sous forme d’arbre l’arborescence sur deux niveaux"
+    "tree -L 1 # Afficher sous forme d’arbre l’arborescence sur un niveau"
    ]
   },
   {
