--- a/docs/06_protoCommande.ipynb
+++ b/docs/06_protoCommande.ipynb
@@ -221,7 +221,7 @@
    "source": [
     "```{note}\n",
     "- ATTENTION aux espaces, nécessaires entre la commande et ses arguments. La commande `ls-l` n'existe pas !\n",
-    "- Le comportement par défaut de ls est de trier par ordre alphabétique en tenant compte de la casse (i.e majuscule minuscule).\n",
+    "- Le comportement par défaut de ls est de trier par ordre alphabétique en tenant compte de la casse (ie. majuscule minuscule).\n",
     "```"
    ]
   }
