--- a/docs/11_linuxIsMore.ipynb
+++ b/docs/11_linuxIsMore.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Un exemple parmi tant d’autres : identifier et compter le nombre d’éléments d’un fichier d’annotation de type GFF (Generic Feature Format).\n",
     "\n",
-    "On demande à awk de récupérer la 3ème colonne ($3) du gff (à l’exclusion des lignes de commentaires !/^#/) puis sort trie alphabétiquement les éléments et uniq les comptes"
+    "On demande à `awk` de récupérer la 3ème colonne ($3) du gff (à l’exclusion des lignes de commentaires `!/^#/`) puis `sort` trie alphabétiquement les éléments et `uniq` les compte"
    ]
   },
   {
