--- a/docs/13_data.ipynb
+++ b/docs/13_data.ipynb
@@ -35,11 +35,11 @@
     "\n",
     "## Télécharger des fichiers\n",
     "\n",
-    "On peut utiliser un navigateur (e.g Cyberduck) pour téléverser sur le serveur\n",
+    "On peut utiliser un navigateur (e.g Cyberduck) pour téléverser sur le serveur.\n",
     "Mieux, on peut effectuer directement le téléchargement depuis le terminal si on dispose de l’URL.\n",
-    "On utilise alors la commande wget. \n",
+    "On utilise alors la commande `wget`. \n",
     "\n",
-    "se déplacer dans l'arborescence de votre projet : `/shared/projects/<project>` (`form_2022_32` à adapter) et dans les sous-répertoires chip-seq puis fastq"
+    "se déplacer dans l'arborescence de votre projet : `/shared/projects/<project>` (`form_2022_32` à adapter) et dans les sous-répertoires `chip-seq` puis `fastq`"
    ]
   },
   {
