--- a/docs/07_arborescence.ipynb
+++ b/docs/07_arborescence.ipynb
@@ -8,25 +8,29 @@
     "# Arborescence de fichiers\n",
     "## L'arborescence du système de fichier \n",
     "\n",
-    "- Le **système de fichier** peut être vu comme un **arbre** dont les **feuilles** sont des **dossiers** et **fichiers**. On peut se **déplacer** dans cet arbre.\n",
-    "- Cet arbre contient une **racine**, le dossier `/`\n",
+    "- Le **système de fichier** peut être vu comme un **arbre** dont les **feuilles** sont des **dossiers** et **fichiers**. On peut se **déplacer** dans cet arbre en suivant les branches.\n",
+    "- L'arbre ci-dessous est ancré par sa **racine**, le dossier `/`\n",
     "\n",
-    "- Le dossier `/` contient notamment \n",
+    "![](images/arborescence.png)\n",
+    "- En suivant les branches, nous observons que le dossier `/` contient notamment \n",
     "    - un dossier `shared` *\n",
+    "![](images/arborescence2.png)\n",
     "        - qui lui même contient un dossier `bank`\n",
+    "![](images/arborescence3.png)\n",
     "        - qui lui même contient un dossier `homo_sapiens`\n",
+    "![](images/arborescence4.png)\n",
     "        - ...\n",
     "- Chemin du dossier \n",
     "    - `/shared/bank/homo_sapiens`\n",
     "    \n",
-    "![](images/arborescence.png)\n",
+    "![](images/arborescence5.png)\n",
     "\n",
     "## Faire référence à un dossier ou fichier ?\n",
     "\n",
     "1) En spécifiant un chemin depuis la racine. \n",
     "    - On parle de chemin absolu\n",
     "\n",
-    "![](images/arborescence2.png)"
+    "![](images/arborescence6.png)"
    ]
   },
   {
@@ -66,6 +70,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7183eea-ddc3-4c90-aa15-e825dd637fdf",
+   "metadata": {},
+   "source": [
+    "![](images/arborescence7.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "15e3dc3a-9dd8-4e9b-ba5f-cebe68d61815",
@@ -93,7 +105,7 @@
    "id": "e7183eea-ddc3-4c90-aa15-e825dd637fdf",
    "metadata": {},
    "source": [
-    "![](images/arborescence3.png)"
+    "Il existe également une commande permettant de voir cette architecture de dossiers et fichiers. Plaçons nous dans le dossier `homo_sapiens`"
    ]
   },
   {
@@ -113,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List directories only\n",
+    "# -d : List directories only\n",
     "tree -d"
    ]
   },
@@ -122,7 +134,8 @@
    "id": "dea39636-d892-4afb-aac8-791152efcf1c",
    "metadata": {},
    "source": [
-    "![](images/arborescence4.png)\n",
+    "Dans ce cas, nous affichons l'ensemble des dossiers en vert ci-dessous ainsi que l'ensemble des sous-dossiers qu'ils contiennent \n",
+    "![](images/arborescence8.png)\n",
     "\n",
     "## Autocompletion\n",
     "\n",
