--- a/docs/07_arborescence.ipynb
+++ b/docs/07_arborescence.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "![](images/arborescence.png)\n",
     "- En suivant les branches, nous observons que le dossier `/` contient notamment \n",
-    "    - un dossier `shared` *\n",
+    "    - un dossier `shared` \n",
     "![](images/arborescence2.png)\n",
     "        - qui lui même contient un dossier `bank`\n",
     "![](images/arborescence3.png)\n",
