--- a/docs/07_arborescence.ipynb
+++ b/docs/07_arborescence.ipynb
@@ -19,8 +19,7 @@
     "![](images/arborescence3.png)\n",
     "        - qui lui même contient un dossier `homo_sapiens`\n",
     "![](images/arborescence4.png)\n",
-    "        - ...\n",
-    "- Chemin du dossier \n",
+    "- Chemin du dossier `homo_sapiens` \n",
     "    - `/shared/bank/homo_sapiens`\n",
     "    \n",
     "![](images/arborescence5.png)\n",
