Add module avail as code block with a header

--- a/docs/05_module.ipynb
+++ b/docs/05_module.ipynb
@@ -11,11 +11,17 @@
     "    - Permet l’installation facile des programmes et de leurs dépendances.\n",
     "    - Le dépôt Bioconda met à disposition de nombreux outils bioinformatiques.\n",
     "- La commande module va charger l'environnement Conda dans votre session\n",
-    "\n",
-    "```bash\n",
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f816ec39-22b7-4b26-9931-172676e22951",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Afficher la liste des environnements disponibles\n",
-    "module avail -l   \n",
-    "```"
+    "module avail -l | head  \n"
    ]
   },
   {
