--- a/docs/05_module.ipynb
+++ b/docs/05_module.ipynb
@@ -10,7 +10,7 @@
     "- Les administrateurs du cluster ont effectué les installations via le gestionnaire de  logiciels Conda. \n",
     "    - Permet l’installation facile des programmes et de leurs dépendances.\n",
     "    - Le dépôt Bioconda met à disposition de nombreux outils bioinformatiques.\n",
-    "- La commande module va charger l'environnement Conda dans votre session\n",
+    "- La commande module va charger l'environnement Conda dans votre session\n"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "source": [
     "# Afficher la liste des environnements disponibles\n",
     "module avail -l | head  \n"
-   ]
+  ]
   },
   {
    "cell_type": "code",
