--- a/docs/07_arborescence.ipynb
+++ b/docs/07_arborescence.ipynb
@@ -25,6 +25,10 @@
     "![](images/arborescence5.png)\n",
     "\n",
     "## Faire référence à un dossier ou fichier ?\n",
+     "\n",
+    "Notre objectif est de nous rendre dans le dossier `homo_sapiens`",
+    "\n",
+    "Nous utiliserons les commandes `pwd` (*print work directory*) et `cd` (*change directory*) et nous aurons alors deux choix :",
     "\n",
     "1) En spécifiant un chemin depuis la racine. \n",
     "    - On parle de chemin absolu\n",
@@ -204,34 +208,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "effcb449-9567-40e8-9e9b-927c8370b098",
-   "metadata": {},
-   "source": [
-    "```bash\n",
-    "# On voit le contenu du dossier \"projects\"\n",
-    "ls\n",
-    "```\n",
-    "\n",
-    "```bash\n",
-    "[...]\n",
-    "form_2022_32\n",
-    "[...]\n",
-    "```\n",
-    "\n",
-    "```bash\n",
-    "# On voit le contenu du répertoire courant \".\"\n",
-    "ls .\n",
-    "```\n",
-    "\n",
-    "```bash\n",
-    "[...]\n",
-    "form_2022_32\n",
-    "[...]\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5dbf00bb-5fa0-4c92-934f-c60ff4073278",
@@ -310,30 +286,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# On liste le contenu du home\n",
-    "ls ~"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eccdfc47-66ab-4680-a421-22b2c50e96e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# On crée un répertoire ‘tmp’ dans le home (make directory)\n",
-    "mkdir ~/tmp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85341555-604c-4119-be33-ef69762696b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# On se déplace dans le dossier tmp nouvellement créé\n",
-    "cd ~/tmp"
+    "# On retourne dans le home\n",
+    "cd ~"
    ]
   },
   {
@@ -347,17 +301,6 @@
     "cd"
    ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ac159a9-8488-418e-8692-7e7bace2f93e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# n’est pas la même chose que ~/tmp, il est vidé automatiquement\n",
-    "cd /tmp "
-   ]
-  }
  ],
  "metadata": {
   "kernelspec": {
