Sauvegarde intermédiaire des modifications de code

--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -30,9 +30,18 @@
     "\n",
     "_* Vous pouvez aussi dire ‘uploader’ :)_\n",
     "    \n",
-    "## Créer des répertoires\n",
+    "## Connaitre le contenu d'un répertoire\n",
     "\n",
-    "On utilisera la commande `mkdir` (**m**a**k**e **dir**ectory)."
+    "On peut utiliser la commande `ls` (**l**i**s**t directory contents) afin de connaitre le contenu de notre dossier.\n",
+    "\n",
+    "Les trois options les plus utiles : -l -a -h.\n",
+    "\n",
+    "- -l : permet d'afficher le contenu sous forme de liste longue avec quelques infos bien utiles mais nous y reviendrons.\n",
+    "- -a : permet d'afficher TOUS les fichiers, même les cachés (on les reconnait par la présence d'un "." devant leur nom).\n",
+    "- -h : Le meilleur ami de l'Homme, il permet d'afficher les poids de fichier de façon lisible par l'oeil humain. Fini les conversions !\n",
+    "\n",
+    "Essayons dans les exemples suivants. Commencez par vous rendre dans votre espace projet\n",
+    "\n"
    ]
   },
   {
@@ -44,10 +53,26 @@
    "source": [
     "# remplacer <project>\n",
     "# cd /shared/projects/<project>/\n",
-    "# Dans notre cadre de ce livre, <project> = form_2022_32/coursLinux/demo\n",
+    "# Dans le cadre de notre livre, <project> = 2325_ebaii/coursLinux/demo\n",
     "# attention de ne pas utiliser ce nom là mais le votre\n",
     "\n",
-    "cd /shared/projects/form_2022_32/coursLinux/demo"
+    "cd /shared/projects/2325_ebaii/coursLinux/demo\n",
+    "# Lister les fichiers et dossiers présents\n",
+    "ls\",
+    "ls -l\n",
+    "ls -la\n",
+    "ls -lah\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71f1135d-0dcd-4004-a0f7-2b3fbae93207",
+   "metadata": {},
+   "source": [
+    "## Créer des répertoires\n",
+    "\n",
+    "On utilisera la commande `mkdir` (**m**a**k**e **dir**ectory).\n",
+    "\n"
    ]
   },
   {
@@ -58,7 +83,21 @@
    "outputs": [],
    "source": [
     "# On crée le dossier\n",
-    "mkdir chip-seq"
+    "mkdir chip-seq",
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14983167-03a1-4cbf-a9f7-82b75b6a61b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# malheureusement il y a une erreur, vous vouliez écrire rna-seq\n",
+    "# on va donc supprimer le dossier vide et en re-créer un avec le bon nom\n",
+    "rmdir chip-seq\n",
+    "mkdir rna-seq"
    ]
   },
   {
@@ -68,8 +107,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Vérifier la création du dossier\n",
-    "ls -l"
+    "# Vérifiez que le nouveau dossier apparaisse\n",
+    "# Deplacez vous dans le dossier que vous venez de creer\n",
+    "# Equivalent de cd ./rna-seq\n",
+    "cd rna-seq"
    ]
   },
   {
@@ -80,17 +121,6 @@
     "````{margin} Sur le ./\n",
     "L'utilisation de ./ est souvent facultative.\n",
     "````"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b2031e4-531b-4cac-807e-7aba9cca8daf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Equivalent de cd ./chip-seq\n",
-    "cd chip-seq"
    ]
   },
   {
