--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "cd /shared/projects/2325_ebaii/coursLinux/demo\n",
     "# Lister les fichiers et dossiers présents\n",
-    "ls\",
+    "ls\n",
     "ls -l\n",
     "ls -la\n",
     "ls -lah\n"
@@ -83,8 +83,7 @@
    "outputs": [],
    "source": [
     "# On crée le dossier\n",
-    "mkdir chip-seq",
-    ""
+    "mkdir chip-seq"
    ]
   },
   {
