--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -37,7 +37,7 @@
     "Les trois options les plus utiles : -l -a -h.\n",
     "\n",
     "- -l : permet d'afficher le contenu sous forme de liste longue avec quelques infos bien utiles mais nous y reviendrons.\n",
-    "- -a : permet d'afficher TOUS les fichiers, même les cachés (on les reconnait par la présence d'un "." devant leur nom).\n",
+    "- -a : permet d'afficher TOUS les fichiers, même les cachés (on les reconnait par la présence d'un `.` devant leur nom).\n",
     "- -h : Le meilleur ami de l'Homme, il permet d'afficher les poids de fichier de façon lisible par l'oeil humain. Fini les conversions !\n",
     "\n",
     "Essayons dans les exemples suivants. Commencez par vous rendre dans votre espace projet\n",
