--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -109,17 +109,8 @@
     "# Vérifiez que le nouveau dossier apparaisse\n",
     "# Deplacez vous dans le dossier que vous venez de creer\n",
     "# Equivalent de cd ./rna-seq\n",
+    "# L'utilisation de ./ est souvent facultative.\n",
     "cd rna-seq"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1462da45-15e6-409b-8892-b425d8c97f94",
-   "metadata": {},
-   "source": [
-    "````{margin} Sur le ./\n",
-    "L'utilisation de ./ est souvent facultative.\n",
-    "````"
    ]
   },
   {
@@ -196,6 +187,25 @@
    "outputs": [],
    "source": [
     "tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcbed231-9f5f-4998-afe2-d44f51ca1c52",
+   "metadata": {},
+   "source": [
+    "## Qui a le droit de quoi ?\n",
+    "Parfois un message d'erreur peut apparaitre, annonçant que vous n'avez pas le droit de réaliser une action\n",
+    "Ces droits sont régis par trois lettres r, w et x.\n"
+    " - r : read, droit de lire le fichier et de l'ouvrir \n",
+    " - w : write, droit d'écrire et modifier un fichier\n",
+    " - x : execute, droit d'executer le fichier (un script par exemple)\n",
+    "Lorsque vous faites un `ls -l`, vous pouvez noter que certaines lignes commencent par un d, signifiant dossier\n",
+    "Notons également le fait que les rwx se répète, ou non, trois fois.\n",
+    "Le premier triplet correspond au droit que possède le propriétaire du fichier,\n",
+    "le second correspond aux droits alloués aux utilisateurs du même groupe que le propriétaire du fichier,\n",
+    "le dernier correspond aux droits de tous les autres utilisateurs.\n",
+    "\n"
    ]
   },
   {
