--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -196,7 +196,7 @@
    "source": [
     "## Qui a le droit de quoi ?\n",
     "Parfois un message d'erreur peut apparaitre, annonçant que vous n'avez pas le droit de réaliser une action\n",
-    "Ces droits sont régis par trois lettres r, w et x.\n"
+    "Ces droits sont régis par trois lettres r, w et x.\n",
     " - r : read, droit de lire le fichier et de l'ouvrir \n",
     " - w : write, droit d'écrire et modifier un fichier\n",
     " - x : execute, droit d'executer le fichier (un script par exemple)\n",
