--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -55,8 +55,8 @@
     "# cd /shared/projects/<project>/\n",
     "# Dans le cadre de notre livre, <project> = 2325_ebaii/coursLinux/demo\n",
     "# attention de ne pas utiliser ce nom là mais le votre\n",
-    "\n",
     "cd /shared/projects/2325_ebaii/coursLinux/demo\n",
+    "\n",
     "# Lister les fichiers et dossiers présents\n",
     "ls\n",
     "ls -l\n",
@@ -110,7 +110,9 @@
     "# Deplacez vous dans le dossier que vous venez de creer\n",
     "# Equivalent de cd ./rna-seq\n",
     "# L'utilisation de ./ est souvent facultative.\n",
-    "cd rna-seq"
+    "cd rna-seq\n",
+    "# Verifiez que vous avez bien créé le dossier\n",
+    "ls -l"
    ]
   },
   {
@@ -121,7 +123,7 @@
    "outputs": [],
    "source": [
     "# On crée deux dossiers d'un coup\n",
-    "mkdir bam fastq\t "
+    "mkdir ref fastq\t "
    ]
   },
   {
@@ -165,6 +167,7 @@
    "outputs": [],
    "source": [
     "# On créé un chemin vers un dossier ‘bam’\n",
+    "# L'option -p permet de créer tous les dossiers intermédiaires manquants.",
     "mkdir -p rna-seq/output/bam"
    ]
   },
@@ -187,6 +190,79 @@
    "outputs": [],
    "source": [
     "tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcbed231-9f5f-4998-afe2-d44f51ca1c52",
+   "metadata": {},
+   "source": [
+    "## Copier, couper et supprimer fichiers et dossiers\n",
+    "WARNING : La ligne de commande est clémente mais bien moins protégée que Windows. Elle préviendra certaines bêtises mais pas toutes !\n",
+    "Les actions suivantes sont donc à réaliser avec précaution\n",
+    "\n",
+    "- cp : (= copier/coller Windows) Permet de copier un fichier, option -r permet de le faire pour un dossier et l'ensemble de son contenu (récursive)\n",
+    "      `cp chemin/pour/monfichier.txt chemin/de/destination` Il est possible de renommer le fichier au passage, il vous suffit de changer le nom de destination\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0530cd4-b45a-466f-9190-384171e4eaf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copions le fichier /shared/bank/homo_sapiens/hg38/fasta/hg38.fa.fai dans le dossier ref/\n",
+    "cp /shared/bank/homo_sapiens/hg38/fasta/hg38.fa.fai rna-seq/ref"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcbed231-9f5f-4998-afe2-d44f51ca1c52",
+   "metadata": {},
+   "source": [
+    " - mv : (= couper/coller Windows mais aussi renommer) Permet de déplacer un fichier ou un dossier mais aussi de le renommer\n",
+    "        `mv chemin/fichier.txt chemin/fichier_renomme.txt # Pour renommer sans bouger`\n",
+    "        `mv chemin/fichier.txt chemin/d/arrivee` # Pour déplacer sans renommer \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0530cd4-b45a-466f-9190-384171e4eaf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Déplaçons le fichier hg38.fa.fai dans le dossier rna-seq/output\n",
+    "mv rna-seq/ref/hg38.fa.fai rna-seq/output\n",
+    "tree # on vérifie que c'est fait\n",
+    "# Finalement, le dossier rna-seq devait bien s'appeler chip-seq ! Renommons le.\n",
+    "mv rna-seq/ chip-seq\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcbed231-9f5f-4998-afe2-d44f51ca1c52",
+   "metadata": {},
+   "source": [
+    " - rm : Permet de supprimer un fichier ou un dossier (-r) mais WARNING attention à son usage, si le fichier est important, on ne vous demandera pas si vous êtes VRAIMENT sûrs de vouloir le supprimer !\n",
+    "        `rm chemin/fichier.txt`\n",
+    "        `rm -r chemin/directory`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0530cd4-b45a-466f-9190-384171e4eaf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Le fichier d'index ne nous sera pas utile, supprimons le\n",
+    "rm chip-seq/output/hg38.fa.fai\n",
+    "tree # on vérifie que c'est fait\n"
    ]
   },
   {
