Mise au propre des retours chariots

--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -61,7 +61,7 @@
     "ls\n",
     "ls -l\n",
     "ls -la\n",
-    "ls -lah\n"
+    "ls -lah"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "# On crée deux dossiers d'un coup\n",
-    "mkdir ref fastq\t "
+    "mkdir ref fastq"
    ]
   },
   {
@@ -202,6 +202,7 @@
     "Les actions suivantes sont donc à réaliser avec précaution\n",
     "\n",
     "- cp : (= copier/coller Windows) Permet de copier un fichier, option -r permet de le faire pour un dossier et l'ensemble de son contenu (récursive)\n",
+    "\n",
     "      `cp chemin/pour/monfichier.txt chemin/de/destination` Il est possible de renommer le fichier au passage, il vous suffit de changer le nom de destination\n",
     "\n"
    ]
@@ -223,7 +224,9 @@
    "metadata": {},
    "source": [
     " - mv : (= couper/coller Windows mais aussi renommer) Permet de déplacer un fichier ou un dossier mais aussi de le renommer\n",
+    "\n",
     "        `mv chemin/fichier.txt chemin/fichier_renomme.txt # Pour renommer sans bouger`\n",
+    "\n",
     "        `mv chemin/fichier.txt chemin/d/arrivee` # Pour déplacer sans renommer \n",
     "\n"
    ]
@@ -239,7 +242,7 @@
     "mv rna-seq/ref/hg38.fa.fai rna-seq/output\n",
     "tree # on vérifie que c'est fait\n",
     "# Finalement, le dossier rna-seq devait bien s'appeler chip-seq ! Renommons le.\n",
-    "mv rna-seq/ chip-seq\n"
+    "mv rna-seq/ chip-seq"
    ]
   },
   {
@@ -248,7 +251,9 @@
    "metadata": {},
    "source": [
     " - rm : Permet de supprimer un fichier ou un dossier (-r) mais WARNING attention à son usage, si le fichier est important, on ne vous demandera pas si vous êtes VRAIMENT sûrs de vouloir le supprimer !\n",
+    "\n",
     "        `rm chemin/fichier.txt`\n",
+    "\n",
     "        `rm -r chemin/directory`\n",
     "\n"
    ]
@@ -262,7 +267,7 @@
    "source": [
     "# Le fichier d'index ne nous sera pas utile, supprimons le\n",
     "rm chip-seq/output/hg38.fa.fai\n",
-    "tree # on vérifie que c'est fait\n"
+    "tree # on vérifie que c'est fait"
    ]
   },
   {
