--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -29,39 +29,7 @@
     "- **C’est LE dossier pour lancer vos analyses …**\n",
     "\n",
     "_* Vous pouvez aussi dire ‘uploader’ :)_\n",
-    "    \n",
-    "## Connaitre le contenu d'un répertoire\n",
-    "\n",
-    "On peut utiliser la commande `ls` (**l**i**s**t directory contents) afin de connaitre le contenu de notre dossier.\n",
-    "\n",
-    "Les trois options les plus utiles : -l -a -h.\n",
-    "\n",
-    "- -l : permet d'afficher le contenu sous forme de liste longue avec quelques infos bien utiles mais nous y reviendrons.\n",
-    "- -a : permet d'afficher TOUS les fichiers, même les cachés (on les reconnait par la présence d'un `.` devant leur nom).\n",
-    "- -h : Le meilleur ami de l'Homme, il permet d'afficher les poids de fichier de façon lisible par l'oeil humain. Fini les conversions !\n",
-    "\n",
-    "Essayons dans les exemples suivants. Commencez par vous rendre dans votre espace projet\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1bb4a2f-e348-4e55-b8d5-934bec0feaf9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# remplacer <project>\n",
-    "# cd /shared/projects/<project>/\n",
-    "# Dans le cadre de notre livre, <project> = 2325_ebaii/coursLinux/demo\n",
-    "# attention de ne pas utiliser ce nom là mais le votre\n",
-    "cd /shared/projects/2325_ebaii/coursLinux/demo\n",
-    "\n",
-    "# Lister les fichiers et dossiers présents\n",
-    "ls\n",
-    "ls -l\n",
-    "ls -la\n",
-    "ls -lah"
+    "    \n"
    ]
   },
   {
@@ -82,7 +50,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# On crée le dossier\n",
+    "# remplacer <project>\n",
+    "# cd /shared/projects/<project>/\n",
+    "# Dans le cadre de notre livre, <project> = 2325_ebaii/coursLinux/demo\n",
+    "# attention de ne pas utiliser ce nom là mais le votre\n",
+    "cd /shared/projects/2325_ebaii/coursLinux/demo\n",
+    "\n",
+    "# On crée le dossier chip-seq\n",
     "mkdir chip-seq"
    ]
   },
