--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -40,6 +40,13 @@
     "## Créer des répertoires\n",
     "\n",
     "On utilisera la commande `mkdir` (**m**a**k**e **dir**ectory).\n",
+    "\n",
+    "Rendez vous d'abord dans votre espace projet.\n",
+    "`cd /shared/projects/<project>\n",
+    "\n",
+    "Dans la commande ci-dessus, remplacez <project> par le nom de votre espace projet\n",
+    "\n",
+    "Dans le cadre de notre livre, et uniquement pour le livre, <project> correspondra à 2325_ebaii/coursLinux/demo\n",
     "\n"
    ]
   },
@@ -50,10 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# remplacer <project>\n",
-    "# cd /shared/projects/<project>/\n",
-    "# Dans le cadre de notre livre, <project> = 2325_ebaii/coursLinux/demo\n",
-    "# attention de ne pas utiliser ce nom là mais le votre\n",
+    "# attention de ne pas utiliser la fin de chemin `2325_ebaii/coursLinux/demo` mais bien le nom de votre projet\n",
     "cd /shared/projects/2325_ebaii/coursLinux/demo\n",
     "\n",
     "# On crée le dossier chip-seq\n",
