--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -42,7 +42,7 @@
     "On utilisera la commande `mkdir` (**m**a**k**e **dir**ectory).\n",
     "\n",
     "Rendez vous d'abord dans votre espace projet.\n",
-    "`cd /shared/projects/<project>\n",
+    "`cd /shared/projects/<project>`\n",
     "\n",
     "Dans la commande ci-dessus, remplacez <project> par le nom de votre espace projet\n",
     "\n",
