--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -44,7 +44,7 @@
     "Rendez vous d'abord dans votre espace projet.\n",
     "`cd /shared/projects/<project>`\n",
     "\n",
-    "Dans la commande ci-dessus, remplacez <project> par le nom de votre espace projet\n",
+    "Dans la commande ci-dessus, remplacez `<project>` par le nom de votre espace projet\n",
     "\n",
     "Dans le cadre de notre livre, et uniquement pour le livre, <project> correspondra à 2325_ebaii/coursLinux/demo\n",
     "\n"
