--- a/docs/11_bonnesPratiques.ipynb
+++ b/docs/11_bonnesPratiques.ipynb
@@ -205,7 +205,7 @@
    "id": "f2482340",
    "metadata": {},
    "source": [
-    "Dans un fichier texte, plusieurs conventions incompatibles existent pour représenter la fin de ligne ou la fin de paragraphe1. Les trois conventions principales trouvent leur origine dans des systèmes d’exploitation concurrents:\n",
+    "Dans un fichier texte, plusieurs conventions incompatibles existent pour représenter la fin de ligne ou la fin de paragraphe. Les trois conventions principales trouvent leur origine dans des systèmes d’exploitation concurrents:\n",
     "\n",
     "1. Dans la convention « Unix » (Linux), la fin de ligne est indiquée par le caractère saut de ligne (LF - Line Feed, code 10 de la table ASCII).\n",
     "2. Dans la convention « Mac », la fin de ligne est indiquée par le caractère retour chariot (CR - Carriage Return , code 13 de la table ASCII).\n",
