Modif jypyter en jupyter

--- a/docs/quizz_01.ipynb
+++ b/docs/quizz_01.ipynb
@@ -60,7 +60,7 @@
     "                \"correct\": True\n",
     "            },\n",
     "            {\n",
-    "                \"code\": \"Jypyter\",\n",
+    "                \"code\": \"Jupyter\",\n",
     "                \"correct\": True\n",
     "            },\n",
     "            {\n",
