--- a/docs/11_bonnesPratiques.ipynb
+++ b/docs/11_bonnesPratiques.ipynb
@@ -129,7 +129,7 @@
    "id": "7c5eea73-180c-4e23-9577-b03e2e9cb4b3",
    "metadata": {},
    "source": [
-    "## Attention aux fichier provenant de Windows/MacOS\n",
+    "## Attention aux fichiers provenant de Windows/MacOS\n",
     "\n",
     "Bien que Linux soit un sytème complet, performant, permettant de réaliser tous les traitements de fichiers, vous aurez surement besoin d'importer un fichier (référence, fichier texte, script) provenant de Windows ou MacOS.\n",
     "\n",
