--- a/docs/11_bonnesPratiques.ipynb
+++ b/docs/11_bonnesPratiques.ipynb
@@ -53,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "echo bonjour EBAII 2023 > bonjour ebaii.txt\n",
+    "echo \"bonjour EBAII 2023\" > bonjour ebaii.txt\n",
     "cat bonjour ebaii.txt"
    ]
   },
@@ -95,7 +95,7 @@
    },
    "outputs": [],
    "source": [
-    "echo bonjour EBAII 2023 > \"bonjour ebaii.txt\"\n",
+    "echo \"bonjour EBAII 2023\" > \"bonjour ebaii.txt\"\n",
     "cat \"bonjour ebaii.txt\""
    ]
   },
@@ -110,7 +110,7 @@
    },
    "outputs": [],
    "source": [
-    "echo bonjour EBAII 2023 > bonjour\\ ebaii.txt\n",
+    "echo \"bonjour EBAII 2023\" > bonjour\\ ebaii.txt\n",
     "cat bonjour\\ ebaii.txt"
    ]
   },
