Prise en compte des issues de denis

--- a/docs/09_manipulate.ipynb
+++ b/docs/09_manipulate.ipynb
@@ -139,10 +139,10 @@
     "#### Remarque\n",
     "Le format BED est un format multi-forme, qui peut être utilisé dans beaucoup de contextes.\n",
     "\n",
-    "#### Exemple 1 (simple)\n",
+    "#### Exemple 1 - BED6 (simple)\n",
     "\n",
     "```\n",
-    "chr1   100   200    peak_1    123\n",
+    "chr1   100   200    peak_1    123    +\n",
     "```\n",
     "\n",
     "#### Explications\n",
@@ -153,12 +153,13 @@
     "1. (chr1) le nombre du chromosome (ou du scaffold)\n",
     "2. (100) position extrême en 5’\n",
     "3. (2099) position extrême en 3’\n",
-    "4. (peak_1) nom systématique de la jonction\n",
+    "4. (peak_1) nom de l'annotation\n",
     "5. (123) score pour cette région\n",
+    "6. (+) brin\n",
     "\n",
-    "Dans d’autres contextes, on peut ne trouver que les 3 ou 4 premiers champs.\n",
+    "Dans d’autres contextes, on peut ne trouver que les 3 premiers champs.\n",
     "\n",
-    "#### Exemple 2 (jonctions entre exons)\n",
+    "#### Exemple 2 - BED12 (jonctions entre exons)\n",
     "\n",
     "```\n",
     "chr1   990   2099   JUNC00001560   3   +   990   2099   255,0,0   2   40,67   0,1042\n",
@@ -167,18 +168,18 @@
     "#### Explications\n",
     "\n",
     "Ici, le format contient 12 colonnes (BED12):\n",
-    "6. (chr1) le nombre du chromosome (ou du scaffold)\n",
-    "7. (990) position extrême en 5’ des lectures chevauchant la jonction\n",
-    "8. (2099) position extrême en 3’ des lectures chevauchant la jonction\n",
-    "9. (JUNC00001560) nom systématique de la jonction\n",
-    "10. (3) nombre de lectures couvrant la jonction\n",
-    "11. (+) brin\n",
-    "12. (990) même chose que la colonne 2\n",
-    "13. (2099) même chose que la colonne 3\n",
-    "14. (255,0,0) code couleur (RVB)\n",
-    "15. (2) pas important\n",
-    "16. (40,67) taille maximum des lectures couvrant l’exon à gauche et à droite de l’intron.\n",
-    "17. (0,1042) pas important\n",
+    "1. (chr1) le nombre du chromosome (ou du scaffold)\n",
+    "2. (990) position extrême en 5’ des lectures chevauchant la jonction\n",
+    "3. (2099) position extrême en 3’ des lectures chevauchant la jonction\n",
+    "4. (JUNC00001560) nom systématique de la jonction\n",
+    "5. (3) nombre de lectures couvrant la jonction\n",
+    "6. (+) brin\n",
+    "7. (990) même chose que la colonne 2\n",
+    "8. (2099) même chose que la colonne 3\n",
+    "9. (255,0,0) code couleur (RVB)\n",
+    "10. (2) pas important\n",
+    "11. (40,67) taille maximum des lectures couvrant l’exon à gauche et à droite de l’intron.\n",
+    "12. (0,1042) pas important\n",
     "\n",
     "\n",
     "![](images/BED.png)\n",
