--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -395,6 +395,9 @@
    "id": "6cb3f516-4ec7-4b67-86c2-78cd053107aa",
    "metadata": {},
    "outputs": [],
+    "tags": [
+        "hide-output"
+    ]
    "source": [
     "# On voit un dossier gff\n",
     "ls ../../hg38"
