Ajout sur toutes les cellules de réponses

--- a/docs/08_storage.ipynb
+++ b/docs/08_storage.ipynb
@@ -296,6 +296,9 @@
    "id": "e844248f-7810-41a9-88e9-c8913f3555ab",
    "metadata": {},
    "outputs": [],
+   "tags": [
+    "hide-cell"
+   ],
    "source": [
     "# remplacer <project> \n",
     "# cd /shared/projects/<project>/\n",
@@ -308,6 +311,9 @@
    "id": "48fbd798-bd28-497a-b3c4-4babd1f3515d",
    "metadata": {},
    "outputs": [],
+   "tags": [
+    "hide-cell"
+   ],
    "source": [
     "# On crée le dossier\n",
     "mkdir annotations"
@@ -319,6 +325,9 @@
    "id": "03eb7a9e-fa96-41c8-a4fd-79f7e7a1d40b",
    "metadata": {},
    "outputs": [],
+   "tags": [
+    "hide-cell"
+   ],
    "source": [
     "# On se déplace\n",
     "cd annotations"
@@ -330,6 +339,9 @@
    "id": "91ebd367-69d4-4b9f-b099-60826de52e9e",
    "metadata": {},
    "outputs": [],
+   "tags": [
+    "hide-cell"
+   ],
    "source": [
     "# Où sommes nous ?\n",
     "pwd"
@@ -341,6 +353,9 @@
    "id": "4b00698a-e112-4e05-898d-12ceea15ce01",
    "metadata": {},
    "outputs": [],
+   "tags": [
+    "hide-cell"
+   ],
    "source": [
     "# On crée le dossier gff dans hg38\n",
     "mkdir -p hg38/gff"
@@ -352,6 +367,9 @@
    "id": "17fa93c9-0ef4-457c-868e-940421f3674c",
    "metadata": {},
    "outputs": [],
+   "tags": [
+    "hide-cell"
+   ],
    "source": [
     "# On se déplace\n",
     "cd hg38/gff"
@@ -363,6 +381,9 @@
    "id": "e0867af1-1857-4d6e-bf20-7286e77080bf",
    "metadata": {},
    "outputs": [],
+   "tags": [
+    "hide-cell"
+   ],
    "source": [
     "# On se déplace dans annotations\n",
     "cd ../.."
@@ -374,6 +395,9 @@
    "id": "64754bf0-0b2e-4928-8a79-c2a1853f46f4",
    "metadata": {},
    "outputs": [],
+   "tags": [
+    "hide-cell"
+   ],
    "source": [
     "# On crée le dossier gff dans mm10\n",
     "mkdir -p mm10/gff"
@@ -385,6 +409,9 @@
    "id": "b25206d5-f8f7-44d4-9288-ce8601f3b5b1",
    "metadata": {},
    "outputs": [],
+   "tags": [
+    "hide-cell"
+   ],
    "source": [
     "cd mm10/gff"
    ]
