Ajout de wc en tant que code

--- a/docs/09_manipulate.ipynb
+++ b/docs/09_manipulate.ipynb
@@ -272,7 +272,7 @@
     "\n",
     "## Compter les lignes d'un fichier\n",
     "\n",
-    "Utiliser la commande wc (word count) avec l'argument -l (line)."
+    "Utiliser la commande `wc` (word count) avec l'argument -l (line)."
    ]
   },
   {
