--- a/docs/11_bonnesPratiques.ipynb
+++ b/docs/11_bonnesPratiques.ipynb
@@ -19,17 +19,13 @@
    ]
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "execution_count": null,
    "id": "45838249",
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "command [options] argument1 argument2"
+    "`command [options] argument1 argument2`"
    ]
   },
   {
